Fixed header z-index

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -102,6 +102,7 @@ $headerHeight: 64px;
   font-family: 'Roboto Mono', sans-serif;
   font-weight: 500;
   text-transform: uppercase;
+  z-index: 100;
   @include transition($mainTransition);
 
   &.is-scrolling {
